Message transporting implemented, makefile created

--- a/AuctionService/Docker/Dockerfile
+++ b/AuctionService/Docker/Dockerfile
@@ -5,6 +5,9 @@ MAINTAINER KuritsuM
 RUN apt update \
     && apt install -y zlib1g-dev g++ git libicu-dev zip libzip-dev zip \
     && docker-php-ext-install intl opcache pdo pdo_mysql \
+    && apt install -y libpq-dev \
+    && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
+    && docker-php-ext-install pdo pdo_pgsql pgsql \
     && pecl install apcu \
     && docker-php-ext-enable apcu \
     && docker-php-ext-configure zip \
@@ -17,6 +20,11 @@ RUN apt update \
     && rm -rf /tmp/pear \
     && docker-php-ext-enable redis
 
+RUN adduser -u 1000 --disabled-password --gecos "" appuser \
+    && mkdir /home/appuser.ssh \
+    && chown -R appuser:appuser /home/appuser/ \
+    && apt install -y supervisor
+
 WORKDIR /var/www/OnlineAuction/AuctionService
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -24,9 +32,5 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 RUN curl -sS https://get.symfony.com/cli/installer | bash
 RUN mv /root/.symfony5/bin/symfony /usr/local/bin/symfony
 
-#COPY ../../Build/php_microservice/message_reader_script.sh /var/www/scripts
-
 RUN composer require symfony/messenger \
     && composer require symfony/amqp-messenger
-
-#ENTRYPOINT ["bash", "/var/www/scripts/message_reader_script.sh"]
