--- a/AuthenticationService/.env
+++ b/AuthenticationService/.env
@@ -18,3 +18,21 @@
 APP_ENV=dev
 APP_SECRET=54b0e77dfa1f1cf62c2f86fac975341e
 ###< symfony/framework-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+MESSENGER_TRANSPORT_DSN=amqp://guest:pass@amqp:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="postgresql://kurisum:1278kd@database:5432/authentication_service?serverVersion=14&charset=utf8"
+###< doctrine/doctrine-bundle ###
+
+
